auto zoom on mobile fixed

--- a/style.css
+++ b/style.css
@@ -101,4 +101,9 @@ form {
     min-width: 90%;
 }
 
+input[type="text"] {
+    font-size: 16px;
+
+}
+
 }
